# autouncle-scraper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PULL_REQUEST_TEMPLATE.md  Pipfile  README.md  SECURITY.md  autouncle_scraper.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  e2e.yml  release.yml
docs/: REFERENCE.md
tests/: conftest.py  test_cli.py  test_detail.py  test_e2e.py  test_filter.py  test_flatten.py  test_http.py  test_io.py  test_resolve.py  test_scrape.py  test_search.py
tests/fixtures/: car_search_form_config.json  detail_6690428.html  rsc_vw_golf8_mp30000_minyear2022_page1.txt  rsc_vw_golf8_mp30000_minyear2022_page2.txt  rsc_vw_golf8_multi_query_only.txt  rsc_vw_golf_mp5000_page1.txt  search_vw_golf_alltrack_page1.html  search_vw_golf_alltrack_page2.html
