[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autouncle-scraper"
description = "Free, keyless scraper and library for autouncle.ch used-car listings. Unofficial, not affiliated with AutoUncle ApS."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Daniel Košč", email = "maintainer@danielkosc.eu" }]
dependencies = ["requests~=2.34", "beautifulsoup4~=4.12"]
dynamic = ["version"]
keywords = ["autouncle", "web-scraping", "scraper", "cars", "switzerland", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/danyk20/autouncle-scraper"
Repository = "https://github.com/danyk20/autouncle-scraper"
Issues = "https://github.com/danyk20/autouncle-scraper/issues"
Changelog = "https://github.com/danyk20/autouncle-scraper/blob/master/CHANGELOG.md"

[project.scripts]
autouncle-scraper = "autouncle_scraper:run_cli"

[project.optional-dependencies]
dev = [
    "pytest~=9.1",
    "pytest-cov~=7.1",
    "responses~=0.26",
    "ruff~=0.15",
    "mypy~=2.1",
    "types-requests~=2.33",
    "types-beautifulsoup4~=4.12",
]

[tool.hatch.version]
path = "autouncle_scraper.py"

[tool.hatch.build.targets.wheel]
include = ["autouncle_scraper.py"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that make real network calls to autouncle.ch",
]
addopts = "-m 'not e2e' --cov=autouncle_scraper --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["autouncle_scraper"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern syntax)
    "B",   # flake8-bugbear (common footguns)
]

[tool.mypy]
python_version = "3.13"
files = ["autouncle_scraper.py"]
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
# Permissive on purpose: this is a small single-file utility, not chasing
# --strict. The goal is catching real mismatches, not maximal rigor.
